Create api grades.
